--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,7 +3,10 @@
 
  <div class="col-md-3"></div>
  <div class="col-md-6">
-     
+     <div class="container quote">
+         <div class="row quotebody">
+
+            
 
 
          </div>
