--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,7 +6,15 @@
      <div class="container quote">
          <div class="row quotebody">
 
-            
+             <div class="card quotecard">
+                 <div style="font-weight: 600; font-size: larger; color: #BE8C63;" class="card-header">
+                     <span> Quote</span>
+
+                 </div>
+                 <div class="card-body">
+                     
+                 </div>
+             </div>
 
 
          </div>
