--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -12,7 +12,11 @@
 
                  </div>
                  <div class="card-body">
-                     
+                     <blockquote class="blockquote mb-0">
+                         <p>{{quote.quote}}</p> <br>
+                         <footer class="blockquote-footer">Quote by: <cite title="Source Title">{{quote.author}}</cite>
+                         </footer>
+                     </blockquote>
                  </div>
              </div>
 
