ft: register temp update

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -33,7 +33,15 @@
                 </div>
             </div>
             
- 
+                     
+            <form method="POST" action="{{url_for('auth.signup')}}">
+            <div class="form sign-up">
+              <button type="submit" class="submit">Sign Up</button>
+                
+            </div>
+            </form>
+        </div>
+    </div>
 
 
 {% endblock %}
