--- a/app/templates/quotesdisplay.html
+++ b/app/templates/quotesdisplay.html
@@ -1,8 +1,18 @@
  {% extends "base.html" %}
  {% block content%}
  
-    <div>{{ displayBlogs(allblogs)}}</div>
+     <div class="col-md-3"></div>
+     <div class="col-md-6">
+         <div class="container quote">
+             <div class="row quotebody">
+
+
+
+             </div>
+         </div>
+          <a style="text-decoration: none;" href="/blog"><button class="quotebtn">Post a blog</button></a>
+         </div>
     
-    {% endblock%}
+     <div class="col-md-3"></div>
  
  {% endblock %}
