ft: quotes display updates

--- a/app/templates/quotesdisplay.html
+++ b/app/templates/quotesdisplay.html
@@ -6,6 +6,20 @@
          <div class="container quote">
              <div class="row quotebody">
 
+                 <div class="card quotecard">
+                     <div style="font-weight: 600; font-size: larger; color: #BE8C63;" class="card-header">
+                         <span> Quote</span>
+                         
+                     </div>
+                     <div class="card-body">
+                         <blockquote class="blockquote mb-0">
+                             <p>{{quote.quote}}</p> <br> 
+                             <footer  class="blockquote-footer">Quote by: <cite
+                                     title="Source Title">{{quote.author}}</cite>
+                             </footer>
+                         </blockquote>
+                     </div>
+                 </div>
 
 
              </div>
