--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -6,8 +6,8 @@
     <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
             
-            <a class="nav-item nav-link" id="home" href="/quotes">Home</a>
-            <a class="nav-item nav-link" id="signUp" href="/blogs"> Blogs</a>
+            <a class="nav-item nav-link" id="home" href="/quotes">Home Page</a>
+            <a class="nav-item nav-link" id="signUp" href="/blogs"> Availlable Blogs</a>
             <a class=" nav-item nav-link" id="login" href="{{url_for('auth.login')}}">Login</a>
             
             <a class="nav-item nav-link" id="signUp" href="{{url_for('auth.signup')}}">Signup</a>
@@ -15,7 +15,7 @@
             
             
         </div>
-        <h5 style="color: white; margin-left: 70%; font-weight: 900;">blog!</h5>
+        <h5 style="color: white; margin-left: 70%; font-weight: 900;">ELVIS BLOGPOSTS</h5>
     </div>
 </nav>
 
