--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -4,6 +4,16 @@
   padding: 0;
 }
 
+button {
+  display: block;
+  margin: 0 auto;
+  width: 260px;
+  height: 36px;
+  border-radius: 30px;
+  color: #fff;
+  font-size: 15px;
+  cursor: pointer;
+}
 body {
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
   background: #ededed;
