--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -16,6 +16,11 @@ input, button {
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
 }
 
+.tip {
+  font-size: 20px;
+  margin: 40px auto 50px;
+  text-align: center;
+}
 
 .cont {
   overflow: hidden;
