--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,7 +3,7 @@
 <div class="cont">
         <form method="POST" action="{{url_for('auth.login')}}">
         <div class="form sign-in" >
-            <h2>Hey, welcome back :-)</h2>
+            <h2>Welcome back :-)</h2>
             <label>
                 <span>Email</span>
                 <input id="email" name="email" type="email" required/>
@@ -21,11 +21,11 @@
             <div class="img">
                 <div class="img__text m--up">
                     <h2>New here?</h2>
-                    <p>Sign up and create amazing blogs!</p>
+                    <p>Simply sign up to view or create blogs</p>
                 </div>
                 <div class="img__text m--in">
-                    <h2>One of us?</h2>
-                    <p>Just sign in. We've missed you!</p>
+                    <h2>Have an account us?</h2>
+                    <p>Just sign in!</p>
                 </div>
                 <div class="img__btn">
                     <span class="m--up">Sign Up</span>
