--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
             
-            <a class="nav-item nav-link" id="home" href="/quotes">Home Page</a>
+            <a class="nav-item nav-link" id="home" href="/quotes">Home-Page</a>
             <a class="nav-item nav-link" id="signUp" href="/blogs"> BlogLists</a>
             <a class=" nav-item nav-link" id="login" href="{{url_for('auth.login')}}">Login</a>
             
