st: general app styling, templates updates and added screenshots for the app

--- a/app/templates/blog_macro.html
+++ b/app/templates/blog_macro.html
@@ -2,7 +2,7 @@
 {% macro displayBlogs(allblogs) %}
 <div class="blog">
     <div class="container">
-        <h1 style="text-align: center; font-weight: 900;">Blog Zone</h1>
+        <h1 style="text-align: center; font-weight: 900;">BlogLists</h1>
         <div class="row">
             <div class="col-md-12">
                 {% if allblogs %}
