--- a/app/templates/quotesdisplay.html
+++ b/app/templates/quotesdisplay.html
@@ -7,7 +7,7 @@
              <div class="row quotebody">
 
                  <div class="card quotecard">
-                     <div style="font-weight: 600; font-size: larger; color: #BE8C63;" class="card-header">
+                     <div style="font-weight: 600; font-size: larger; color: #479372;" class="card-header">
                          <span> Quote</span>
                          
                      </div>
