--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,7 +3,7 @@
 <div class="cont">
         <form method="POST" action="{{url_for('auth.login')}}">
         <div class="form sign-in" >
-            <h2>Welcome back :-)</h2>
+            <h2>Welcome back to ELVIS BLOGS</h2>
             <label>
                 <span>Email</span>
                 <input id="email" name="email" type="email" required/>
